[tool.poetry]
name = "login"
version = "0.1.0"
description = "Login Service using FastAPI"
authors = ["Miguel Vidigal Rodrigues"]
readme = "README.md"
package-mode= false

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.30"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
